--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
-    <title>Aurora Medical</title>
+    <title>Country Restrictions</title>
     <link rel="icon"
         href="https://i.natgeofe.com/n/63527567-9a8b-4b08-819d-a6142fb2b350/aurora-kirkjufell-iceland_4x3.jpg"
         type="image/x-icon">
@@ -228,8 +228,6 @@
             margin: 0;
             margin-top: 3%;
             white-space: nowrap;
-
-
         }
 
         .countrydropdown {
@@ -238,7 +236,6 @@
             background-color: white;
             color: #333333;
             font-weight: 300;
-            font-size: 1.5vw;
             border: 1px white solid;
         }
 
@@ -254,6 +251,14 @@
         }
 
         .dropdown-toggle::after {
+            display: inline-block;
+            margin-left: 0.255rem;
+            vertical-align: 0.255rem;
+            content: "";
+            border-top: 0.3rem solid;
+            border-right: 0.3rem solid transparent;
+            border-bottom: 0;
+            border-left: 0.3rem solid transparent;
             right: 0;
         }
 
@@ -494,7 +499,7 @@
             Get curated plan for your destination
         </h1>
         <!--Box for recommended Plan-->
-        <div class="container recommplancontainer w-75 my-5" style="color: #112F24;">
+        <div class="recommplancontainer w-75 my-5 mx-auto" style="color: #112F24;">
             <h2 class="text-center display-6 mt-5">
                 Recommended Plan
             </h2>
@@ -610,13 +615,13 @@
                 </div>
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row mx-auto align-items-center">
-                        <div class="col-4">
-                            <button style="background-color: white; color: #112F24; border: none" class="px-3 py-1 d-block" id="decrement-people-count-btn">
+                        <div class="col-4" style="padding-left: 0;">
+                            <button style="background-color: white; color: #112F24; border: none;" class="px-3 py-1 d-block" id="decrement-people-count-btn">
                                 -
                             </button>
                         </div>
                         <div class="col-4 text-center" id="people-count" style="font-weight: 400;">1</div>
-                        <div class="col-4 d-flex justify-content-end">
+                        <div class="col-4 d-flex justify-content-end" style="padding-right: 0;">
                             <button style="background-color: white; color: #112F24; border: none" class="px-3 py-1 d-block" id="increment-people-count-btn">
                                 +
                             </button>
@@ -731,7 +736,7 @@
                 <div class="quicklinksdiv"><a href="./pages/blog.html" class="quicklinks">News</a></div>
             </div>
 
-            <div class="col-4 text-center px-2">
+            <div class="col-4 text-center px-2" style="font-weight: 400;">
                 <div class="quicklinksdiv"><a href="./pages/contact-us.html#contact-info" class="quicklinks midlinks">Find a Clinic</a></div>
                 <div class="quicklinksdiv"><a href="index.html#package-recommendation" class="quicklinks midlinks">Tests for Travel</a></div>
                 <div class="quicklinksdiv"><a href="./pages/booknow.html" class="quicklinks midlinks">Book an Appointment</a></div>
@@ -823,17 +828,8 @@
         integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
         crossorigin="anonymous"></script>
 
+    <script src="./js/update_space_holder_height.js"></script>
     <script>
-        // update space holder height
-        let navbar = document.querySelector('#navbar');
-        let space_holder = document.querySelector('#space-holder');
-        ['load', 'resize'].forEach((event) => {
-            window.addEventListener(event, (e) => {
-                console.log(space_holder.style.height)
-                space_holder.style.height = `${navbar.offsetHeight}px`;
-            })
-        })
-
         // update package prices
         let increment_btn = document.querySelector('#increment-people-count-btn');
         let decrement_btn = document.querySelector('#decrement-people-count-btn');
