[Brandon] Quick links to prefilled cart

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     We guarantee our services comply with the newest regulations of your destination authorities. Book from us to ensure you travel with correct documents required.
                 </p>
                 <div class="text-start">
-                    <a href="./pages/booknow.html">
+                    <a href="./pages/cart_pcr_prefilled.html">
                         <button class="button mt-4" id="slide-to-form-btn">
                             Buy Plan
                         </button>
@@ -697,7 +697,7 @@
                     Get tested anywhere you are, via an online supervised ART on the Doctor Anywhere mobile app. Certified results via email or SMS. Results would be available within 2 Hours
                 </p>
                 <div class="text-start">
-                    <a href="./pages/booknow.html">
+                    <a href="./pages/cart_art_prefilled.html">
                         <button class="button mt-4" id="slide-to-form-btn">
                             Buy Plan
                         </button>
