--- a/pages/cart_pcr_prefilled.html
+++ b/pages/cart_pcr_prefilled.html
@@ -30,16 +30,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
+
     <style>
         ::selection {
             color: white;
             background: #FEBB60;
         }
-
-
-
 
         .row {
             width: 100%;
@@ -437,17 +434,17 @@
     
     <script>
         let nameD = sessionStorage.getItem('nameKey');
-        document.getElementById("bookedName").innerHTML = "Name of person to be tested: " + nameD;
+        document.getElementById("bookedName").innerHTML = "Name of person to be tested: " + "Brandon";
         let phoneNumber2 = sessionStorage.getItem('phoneKey');
-        document.getElementById("phoneNumber").innerHTML = "Contact Number: " + phoneNumber2;
+        document.getElementById("phoneNumber").innerHTML = "Contact Number: " + "+65 12345678";
         let emailValue = sessionStorage.getItem('emailKey');
-        document.getElementById("email").innerHTML = "Contact Email: " + emailValue;
+        document.getElementById("email").innerHTML = "Contact Email: " + "example@example.com";
         let x = sessionStorage.getItem('choice');
-        document.getElementById("result").innerHTML = "Date chosen: " + x;
+        document.getElementById("result").innerHTML = "Date chosen: " + "10/12/2022 16:00";
         let locationValue = sessionStorage.getItem('locationKey');
-        document.getElementById("location").innerHTML = "Preferred location: " + locationValue;
+        document.getElementById("location").innerHTML = "Preferred location: " + "NTU Aurora Clinic";
         let covidChoice = sessionStorage.getItem('covidKey');
-        document.getElementById("covidtest").innerHTML = "Test Chosen: " + covidChoice;
+        document.getElementById("covidtest").innerHTML = "Test Chosen: " + "Normal PCR";
         document.getElementById("covidtestOrder").innerHTML = covidChoice;
         switch(covidChoice) {
             case "PCR Test (Standard)":
