--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
     <!--PCR Test Section-->
     <div class="container-fluid pcrcontainer" style="color:#112F24">
         <div class="row">
-            <div class="col-lg-6 col-md-12 text-start">
+            <div class="col-lg-6 col-md-12 text-start d-flex flex-column justify-content-center">
                 <h1 style="font-size: 4rem">
                     PCR Test
                 </h1>
@@ -680,7 +680,7 @@
     <!--ART Test Section-->
     <div class="container-fluid pcrcontainer mb-5" style="color:#112F24">
         <div class="row">
-            <div class="col-lg-6 col-md-12 text-start">
+            <div class="col-lg-6 col-md-12 text-start d-flex flex-column justify-content-center">
                 <h1 style="font-size: 4rem">
                     ART Test
                 </h1>
