Added index pics

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         /* hero banner css starts */
         .hero-banner {
             min-height: 60vh;
-            background-image: url('https://st3.depositphotos.com/1643295/18071/i/450/depositphotos_180717236-stock-photo-confident-smiling-asian-doctors-looking.jpg');
+            background-image: url('./assets/images/index3.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-blend-mode: darken;
