Updated broken links and adjusted pictures for index

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -334,8 +334,8 @@
                 <div class="quicklinksdiv"><a href="./about-us.html" class="quicklinks">About Us</a></div>
                 <div class="quicklinksdiv"><a href="./FAQ.html" class="quicklinks">FAQ</a></div>
                 <div class="quicklinksdiv"><a href="./blog.html" class="quicklinks">News</a></div>
-                <div class="quicklinksdiv"><a href="./pages/sitemap.html" class="quicklinks">Sitemap</a></div>
-                <div class="quicklinksdiv"><a href="./pages/pdpc.html" class="quicklinks">PDPC</a></div>
+                <div class="quicklinksdiv"><a href="./sitemap.html" class="quicklinks">Sitemap</a></div>
+                <div class="quicklinksdiv"><a href="./pdpc.html" class="quicklinks">PDPC</a></div>
             </div>
 
             <div class="col-4 text-center px-2" style="font-weight: 400;">
