--- a/pages/sart.html
+++ b/pages/sart.html
@@ -51,7 +51,7 @@
         }
 
         .hero {
-            background-image: url("image/sart.jpg");
+            background-image: url("image/sart.png");
             background-repeat: no-repeat;
             background-size: cover;
 
@@ -279,7 +279,7 @@
         }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('../assets/images/sart.jpg');
+    background-image: url('../assets/images/sart.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -338,6 +338,9 @@ h1 {
             as 15 minutes. A viable option for anyone who is feeling unwell or needs verifcation from your supervisors
             or higher ups about your covid status.
         </a>
+        <br>
+        <br>
+        <br>
         <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
         class="text-center">Why take a Supervised ART?</h1>
     <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
@@ -451,8 +454,8 @@ h1 {
                 <div class="quicklinksdiv"><a href="./about-us.html" class="quicklinks">About Us</a></div>
                 <div class="quicklinksdiv"><a href="./FAQ.html" class="quicklinks">FAQ</a></div>
                 <div class="quicklinksdiv"><a href="./blog.html" class="quicklinks">News</a></div>
-                <div class="quicklinksdiv"><a href="./pages/sitemap.html" class="quicklinks">Sitemap</a></div>
-                <div class="quicklinksdiv"><a href="./pages/pdpc.html" class="quicklinks">PDPC</a></div>
+                <div class="quicklinksdiv"><a href="./sitemap.html" class="quicklinks">Sitemap</a></div>
+                <div class="quicklinksdiv"><a href="./pdpc.html" class="quicklinks">PDPC</a></div>
             </div>
 
             <div class="col-4 text-center px-2" style="font-weight: 400;">
