--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -250,11 +250,11 @@
     <div class="container-fluid footer-container">
         <div class="row" style="font-weight: 300;">
             <div class="col-4 text-center px-2">
-                <div class="quicklinksdiv"><a href="./pages/about-us.html" class="quicklinks">About Us</a></div>
-                <div class="quicklinksdiv"><a href="./pages/FAQ.html" class="quicklinks">FAQ</a></div>
-                <div class="quicklinksdiv"><a href="./pages/blog.html" class="quicklinks">News</a></div>
-                <div class="quicklinksdiv"><a href="./pages/sitemap.html" class="quicklinks">Sitemap</a></div>
-                <div class="quicklinksdiv"><a href="./pages/pdpc.html" class="quicklinks">PDPC</a></div>
+                <div class="quicklinksdiv"><a href="./about-us.html" class="quicklinks">About Us</a></div>
+                <div class="quicklinksdiv"><a href="./FAQ.html" class="quicklinks">FAQ</a></div>
+                <div class="quicklinksdiv"><a href="./blog.html" class="quicklinks">News</a></div>
+                <div class="quicklinksdiv"><a href="./sitemap.html" class="quicklinks">Sitemap</a></div>
+                <div class="quicklinksdiv"><a href="./pdpc.html" class="quicklinks">PDPC</a></div>
                 
             </div>
 
