Added images/assets to multiple pages and adjusted formatting

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
             <!--Plan details-->
             <div class="row planmoredetailsrow text-center mt-5">
-                <div class="col"><a href="countries.html" target="_blank" class="planmoredetails">See the restrictions of your chosen country</a>
+                <div class="col"><a href="./pages/countries.html" target="_blank" class="planmoredetails">See the restrictions of your chosen country</a>
                     <svg xmlns="http://www.w3.org/2000/svg" width="0.9rem" height="0.9rem" fill="currentColor"
                         class="bi bi-arrow-up-right" viewBox="0 0 16 16" style="color:#333333;">
                         <path fill-rule="evenodd"
