--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -72,7 +72,7 @@
     <!-- hero -->
     <section class="hero-banner d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1>
+            <h1 style="font-size: 5rem;">
                 FAQ
             </h1>
         </div>
@@ -84,7 +84,8 @@
     <!-- FAQ title -->
     <div class="faq_title">
         <div class="text_area">
-            <p><b> Asked Questions about Mobile Pre-Departure Test</b></p>
+            <h2 style="font-family: 'Playfair Display'; font-size: 3rem; color:#333333;">Common Questions on Preparing for your test</h2>
+                <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         </div>
     </div>
     <!-- FAQ boxes-->
@@ -148,7 +149,8 @@
         </div>
         <div class="faq_title">
             <div class="text_area">
-                <p><b>Frequently Asked Questions about Mobile Pre-Departure Test</b></p>
+                <h2 style="font-family: 'Playfair Display'; font-size: 3rem; color:#333333;">Frequently Asked Qustions on Pre Departure Tests</h2>
+                <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
             </div>
         </div>
         <div class="group_2">
@@ -215,6 +217,19 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid text-center" style="padding: 5rem 5%; background-image: url(https://img.freepik.com/premium-photo/asian-senior-patient-having-consultation-with-doctor_1339-79722.jpg?w=2000); background-position: center; background-color: rgba(0, 0, 0, 0.544); background-repeat: no-repeat; background-size: cover; background-blend-mode: darken; color: white;">
+        <h1 style="font-size: 4rem;">
+            Still Got Questions?
+        </h1>
+        <p>
+            Get in touch with us by sending an enquiry and our team will be glad to help.
+        </p>
+        <a href="./pages/contact-us.html">
+            <button class="button mt-5" id="slide-to-form-btn">
+                Contact Us
+            </button>
+        </a>
     </div>
 
     <!-- Footer -->
