--- a/pages/blog.html
+++ b/pages/blog.html
@@ -66,7 +66,7 @@
     <!-- hero -->
     <section class="hero-banner d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1>
+            <h1 style="font-size: 5rem;">
                 Blogs & Medical Journals
             </h1>
         </div>
@@ -77,7 +77,7 @@
         <div class="row justify-content-start">
             <div class="col-9 text-area-left">
                 <h1>What you need to know about COVID-19 testing</h1>
-                <p>
+                <p style="font-family: 'Noto Sans', sans-serif;">
                     <br>
                     From 1 December 2020, in Singapore, you are able to get tested for COVID-19 with the Polymerase
                     Chain
@@ -96,11 +96,11 @@
             </div>
             <div class="col-3 text-area">
                 <ul class="list-group">
-                    <li class="list-group-item"><b>On this page</b></li>
-                    <li class="list-group-item"> • A second item</li>
-                    <li class="list-group-item"> • A third item</li>
-                    <li class="list-group-item"> • A fourth item</li>
-                    <li class="list-group-item"> • And a fifth one</li>
+                    <li class="list-group-item"><b>Our News:</b></li>
+                    <li class="list-group-item"><a href="#">November 2022</a></li>
+                    <li class="list-group-item"><a href="#">October 2022</a></li>
+                    <li class="list-group-item"><a href="#">September 2022</a></li>
+                    <li class="list-group-item"><a href="#">August 2022</a></li>
                 </ul>
             </div>
         </div>
@@ -111,31 +111,31 @@
         <div class="col-9 area_major">
             <div class="col-9 text_area_major d-flex flex-column justify-content-center">
                 <p class="title" style="margin:0;">How does a PCR Test Work?</p>
-                <p class="content" style="font-size: 1.5rem;">Dr Tan Wei Ming from Aurora Medical is here to answer all of your questions on modern Covid-19 tests, vaccinations and talk about some common misconceptions you may have about the Covid-19 Vaccine</p>
+                <p class="content" style="font-size: 1.5rem;">Dr Tan Wei Ming from Aurora Medical is here to answer all of your questions on modern Covid-19 tests, vaccinations and talk about some common misconceptions you may have about the Covid-19 Vaccine ... <a href="#">Read More</a></p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">Should you take your 5th dose?</p>
-                <p class="content">Dr Ang shares his thoughts, and why being cautious of Covid-19 might be more important than you think</p>
+                <p class="content">Dr Ang shares his thoughts, and why being cautious of Covid-19 might be more important than you think... <br><a href="#">Read More</a></p>
             </div>
         </div>
-        <div class="col-3 area_sub">
+        <div class="col-3 area_sub" style="background: url(../assets/images/china_blog.jpg) no-repeat; background-size: 100% 60%;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">China tightens border-control</p>
-                <p class="content">On the 15th of October, China made the move to tighten their border restrictions. Effective 20th October, now travellers going into Mainland China are expected to...</p>
+                <p class="content">On the 15th of October, China made the move to tighten their border restrictions. Effective 20th October, now travellers going into Mainland China are expected to... <br> <a href="#">Read More</a></p>
             </div>
         </div>
-        <div class="col-3 area_sub">
+        <div class="col-3 area_sub" style="background: url(../assets/images/xbb_blog.jfif) no-repeat; background-size: 100% 60%;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">XBB Strain. Mighty or Mini?</p>
-                <p class="content">The new Covid-19 strain XBB is scaring people around the word, leading to rampant fearmongering and a buildup of stress for many workers who now are being forced to return to their workplaces...</p>
+                <p class="content">The new Covid-19 strain XBB is scaring people around the word, leading to rampant fearmongering and a buildup of stress for many workers who now are being forced to return to their workplaces... <br><a href="#">Read More</a></p>
             </div>
         </div>
         <div class="col-3 area_sub">
-            <div class="col-3 text_area_sub">
+            <div class="col-3 text_area_sub" style="background: url(../assets/images/landscape_blog.jpg) no-repeat; background-size: 100% 60%;">
                 <p class="title" style="margin:0;">Other news about Covid-19 restrictions in Southeast Asia</p>
-                <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up on their border restrictions, but a few particular countries have chosen to tighten their border control in view of the most recent covid strain...</p>
+                <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up on their border restrictions, but a few particular countries have chosen to tighten their border control in view of the most recent covid strain...<br> <a href="#">Read More</a></p>
             </div>
         </div>
     </div>
