--- a/pages/countries.html
+++ b/pages/countries.html
@@ -385,103 +385,135 @@
     <!--Countries List-->
     <div class="container-fluid text-center country-container ">
         <div class="row country-row">
-            <div class="col-2"></div>
-            <div class="col-3 ">
+            <div class="col-4 ">
                 <div class="country-title "><span class="fi fi-cn country-flag"></span>China</div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Restrictions
+                    <ul class="country-list">
+                        <li>PCR and IGM Required</li>
+                        <li>48 Hour Quarantine</li>
+                        <li>Mask Required for <strong>ALL</strong> spaces</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Our Plan for You
+                    <ul class="country-list">
+                        <li>PCR and IGM</li>
+                        <li style="font-size: 1.5rem;">ONLY $90 ea</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2 btn-col">
+                <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
+                <a href="./cart_pcr_prefilled.html" class="btn btn-primary btn-country-filled">Buy Plan</a>
+            </div>
+            <div class="col-2"></div>
+        </div>
+
+        <hr class="country-divider mx-auto">
+
+
+        <div class="row country-row">
+            <div class="col-4 ">
+
+                <div class="country-title "><span class="fi fi-in country-flag"></span>India</div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Restrictions
+                    <ul class="country-list">
+                        <li>PCR and SART Required</li>
+                        <li>No Quarantine Required</li>
+                        <li>Mask Required for indoors</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Our Plan for You
+                    <ul class="country-list">
+                        <li>PCR and SART</li>
+                        <li style="font-size: 1.5rem;">ONLY $79 ea</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-2 btn-col">
+                <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
+                <a href="./cart_pcr_prefilled.html" class="btn btn-primary btn-country-filled">Buy Plan</a>
+            </div>
+            <div class="col-2"></div>
+        </div>
+
+        <hr class="country-divider mx-auto">
+
+        <div class="row country-row">
+            <div class="col-4 ">
+
+                <div class="country-title "><span class="fi fi-ph country-flag"></span>Philippines</div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Restrictions
+                    <ul class="country-list">
+                        <li>SART and IGM Required</li>
+                        <li>12 Hour Qurantine</li>
+                        <li>No Masks Required</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="country-details">
+                    Our Plan for You
+                    <ul class="country-list">
+                        <li>Supervised ART and IGM</li>
+                        <li style="font-size: 1.5rem;">ONLY $100 ea</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-2 btn-col">
+                <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
+                <a href="./cart_art_prefilled.html" class="btn btn-primary btn-country-filled">Buy Plan</a>
+            </div>
+            <div class="col-2"></div>
+        </div>
+
+        <hr class="country-divider mx-auto">
+
+        <div class="row country-row">
+            <div class="col-4 ">
+
+                <div class="country-title "><span class="fi fi-mm country-flag"></span>Myanmar</div>
             </div>
             <div class="col-2">
 
                 <div class="country-details">
                     Restrictions
                     <ul class="country-list">
-                        <li>PCR Test Required</li>
-                        <li>48 Hour Qurantine</li>
-                        <li>Mask Required</li>
+                        <li>ART and IGM Required</li>
+                        <li>24 Hour Qurantine</li>
+                        <li>Mask Required for <strong>ALL</strong> spaces</li>
                     </ul>
                 </div>
             </div>
-
-            <div class="col-2 btn-col">
-                <a href="#" class="btn btn-primary btn-country-filled">Buy Plan</a>
-            </div>
-            <div class="col-2"></div>
-        </div>
-
-        <hr class="country-divider mx-auto">
-
-
-        <div class="row country-row">
-            <div class="col-2"></div>
-            <div class="col-3 ">
-
-                <div class="country-title "><span class="fi fi-in country-flag"></span>India</div>
-            </div>
-            <div class="col-3">
-
+            <div class="col-2">
                 <div class="country-details">
+                    Our Plan for You
                     <ul class="country-list">
-                        <li>PCR Test Required</li>
-                        <li>48 Hour Qurantine</li>
-                        <li>Mask Required</li>
+                        <li>Supervised ART and IGM</li>
+                        <li style="font-size: 1.5rem;">ONLY $100</li>
                     </ul>
                 </div>
             </div>
 
             <div class="col-2 btn-col">
                 <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
-                <a href="#" class="btn btn-primary btn-country-filled">Buy Plan</a>
-            </div>
-            <div class="col-2"></div>
-        </div>
-
-        <hr class="country-divider mx-auto">
-
-        <div class="row country-row">
-            <div class="col-1"></div>
-            <div class="col-4 ">
-
-                <div class="country-title "><span class="fi fi-ph country-flag"></span>Philippines</div>
-            </div>
-            <div class="col-3">
-
-                <div class="country-details">
-                    <ul class="country-list">
-                        <li>PCR Test Required</li>
-                        <li>48 Hour Qurantine</li>
-                        <li>Mask Required</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-2 btn-col">
-                <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
-                <a href="#" class="btn btn-primary btn-country-filled">Buy Plan</a>
-            </div>
-            <div class="col-2"></div>
-        </div>
-
-        <hr class="country-divider mx-auto">
-
-        <div class="row country-row">
-            <div class="col-1"></div>
-            <div class="col-4 ">
-
-                <div class="country-title "><span class="fi fi-mm country-flag"></span>Myanmar</div>
-            </div>
-            <div class="col-3">
-
-                <div class="country-details">
-                    <ul class="country-list">
-                        <li>PCR Test Required</li>
-                        <li>48 Hour Qurantine</li>
-                        <li>Mask Required</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-2 btn-col">
-                <a href="#" class="btn btn-outline-secondary btn-country-hollow">More Details</a>
-                <a href="#" class="btn btn-primary btn-country-filled">Buy Plan</a>
+                <a href="./cart_art_prefilled.html" class="btn btn-primary btn-country-filled">Buy Plan</a>
             </div>
             <div class="col-2"></div>
         </div>
