--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -308,7 +308,7 @@ h1 {
 
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
+            <h1 style="font-size: 5rem; line-height: 5rem;">
                 Mobile Departure <br> Swab Test
             </h1>
 
