--- a/pages/sart.html
+++ b/pages/sart.html
@@ -320,8 +320,8 @@ h1 {
 
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
-                Supervised ARt
+            <h1 style=" font-size: 5rem; line-height: 5rem;">
+                Supervised ART
             </h1>
 
         </div>
