--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -174,7 +174,7 @@ h1 {
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
+            <h1 style="font-size: 5rem; line-height: 5rem;">
                 Sitemap
             </h1>
 
