--- a/pages/igm.html
+++ b/pages/igm.html
@@ -304,7 +304,7 @@
 
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem; font-weight: bold;">
+            <h1 style=" font-size: 5rem; line-height: 5rem; font-weight: bold;">
                 Serology / IGM Test
             </h1>
 
