--- a/pages/pcr.html
+++ b/pages/pcr.html
@@ -267,7 +267,7 @@
         }
         .hero-banner {
     min-height: 60vh;
-    background-image: url('../assets/images/pcr.png');
+    background-image: url('../assets/images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
