--- a/pages/products.html
+++ b/pages/products.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
     <style>
         .hero {
-            background-image: url("image/bg.png");
+            background-image: url("image/ser");
             background-repeat: no-repeat;
             background-size: cover;
 
@@ -124,7 +124,7 @@
     }
     .hero-banner {
     min-height: 60vh;
-    background-image: url('../assets/images/bg.png');
+    background-image: url('../assets/images/services_hero.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -165,8 +165,8 @@ h1 {
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
-                our services
+            <h1 style=" font-size: 5rem; line-height: 5rem;">
+                Our Services
             </h1>
 
         </div>
@@ -222,7 +222,7 @@ h1 {
                         <div class="card-body">
                             <h5 class="card-title">Bundles</h5>
                             <p class="card-text">Check out the bundles we offer for travel to specific countries for the best deals!</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="countries.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -248,8 +248,8 @@ h1 {
                 <div class="quicklinksdiv"><a href="./about-us.html" class="quicklinks">About Us</a></div>
                 <div class="quicklinksdiv"><a href="./FAQ.html" class="quicklinks">FAQ</a></div>
                 <div class="quicklinksdiv"><a href="./blog.html" class="quicklinks">News</a></div>
-                <div class="quicklinksdiv"><a href="./pages/sitemap.html" class="quicklinks">Sitemap</a></div>
-                <div class="quicklinksdiv"><a href="./pages/pdpc.html" class="quicklinks">PDPC</a></div>
+                <div class="quicklinksdiv"><a href="./sitemap.html" class="quicklinks">Sitemap</a></div>
+                <div class="quicklinksdiv"><a href="./pdpc.html" class="quicklinks">PDPC</a></div>
             </div>
 
             <div class="col-4 text-center px-2" style="font-weight: 400;">
