Edited wording for booknow.html

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -464,7 +464,7 @@
             Still have doubts?
         </h1>
         <p>
-            We are here to help you. Contact us now!
+            We are here to help you. Contact us for any burning doubts or questions!
         </p>
         <a href="./pages/contact-us.html">
             <button class="button mt-5" id="slide-to-form-btn">
