Edited readability and buttons for products pages

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -395,9 +395,10 @@
         <h1 style="font-size: 4rem;">
             Booking Form
         </h1>
-        <p>
-            Get ready for your booking with the most affordable and reliable Covid-19 testing service in Singapore.
-        </p>
+        <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300; margin-top: 0%;">
+            Get ready for your booking with the most affordable and reliable Covid-19 testing service in Singapore. <br>
+            Enter your personal details and move on to payment details in the next page.</p>
+        
     </div>
     <!-- <div class="preface">
         <h2> Booking</h2>
@@ -463,7 +464,7 @@
         <h1 style="font-size: 4rem;">
             Still have doubts?
         </h1>
-        <p>
+        <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300; margin-top: 0%;">
             We are here to help you. Contact us for any burning doubts or questions!
         </p>
         <a href="./pages/contact-us.html">
