--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
         .herotext {
             font-family: 'Noto Sans', sans-serif;
             font-weight: 300;
-            font-size: 1rem;
+            font-size: 1.25rem;
             color: white;
+            margin-left: 20%;
+            margin-right: 20%;
         }
 
 
@@ -410,6 +412,17 @@
                 display: none;
             }
         }
+        h2 {
+            font-size: 3rem;
+            font-weight: 400;
+            margin: 0;
+        }
+        .mt-2 {
+            font-size: 1.5rem;
+        }
+        .mt-5 {
+            font-size: 1.5rem;
+        }
 
     </style>
 </head>
@@ -500,7 +513,7 @@
         </h1>
         <!--Box for recommended Plan-->
         <div class="recommplancontainer w-75 my-5 mx-auto" style="color: #112F24;">
-            <h2 class="text-center display-6 mt-5">
+            <h2 class="text-center display-6 mt-5" style="font-size: 3rem;">
                 Recommended Plan
             </h2>
 
@@ -568,7 +581,7 @@
         <div class="w-75 p-4 mx-auto my-5" style="background-color:#41B188; color: white;">
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 py-2">
-                    <b>Select your destination</b> 
+                    <b style="font-size: 2rem;">Select your destination</b> 
                 </div>
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row dropdownrow">
@@ -611,7 +624,7 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 py-2">
-                    <b>Number of people</b> 
+                    <b style="font-size: 2rem;">Number of people</b> 
                 </div>
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row mx-auto align-items-center">
