--- a/pages/igm.html
+++ b/pages/igm.html
@@ -84,11 +84,14 @@
             object-fit: cover;
         }
 
+
         .herobtn {
-            font-size: 1.5rem;
+            font-size: 2.5vw;
             text-align: center;
             align-items: center;
             justify-content: center;
+            padding: 2%;
+            font-family: 'Playfair Display', serif;
         }
 
         h2 {
@@ -275,6 +278,22 @@
             background-color: rgba(0, 0, 0, 0.47);
             padding: 5%;
         }
+        .button {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #112F24;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #112F24;
+    padding: 1rem;
+    transition: all 0.3s;
+}
+
+.button:hover {
+    color: white;
+    background-color: #112F24;
+}
     </style>
 </head>
 
@@ -339,8 +358,12 @@
                     style="object-fit: contain; height: 20vw; width: auto; vertical-align: center;">
             </div>
         </div>
-        <div style=" align-items: center; justify-content: center; display: flex; margin-top: 5%;">
-            <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+        <div class="text-start">
+            <a href="./booknow.html">
+                <button class="button mt-4" id="slide-to-form-btn">
+                    Buy Plan
+                </button>
+            </a>
         </div>
     </div>
     <div class="box2">
