--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -94,6 +94,8 @@
             text-align: center;
             align-items: center;
             justify-content: center;
+            padding: 3%;
+            font-family: 'Playfair Display', serif;
         }
 
         h2 {
@@ -279,6 +281,22 @@ h4 {
 h1 {
     font-family: 'Playfair Display', serif;
 }
+.button {
+            font-family: 'Noto Sans', sans-serif;
+            font-size: 1rem;
+            font-weight: bold;
+            color: #112F24;
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid #112F24;
+            padding: 1rem;
+            transition: all 0.3s;
+        }
+
+        .button:hover {
+            color: white;
+            background-color: #112F24;
+        }
     </style>
 </head>
 
@@ -341,7 +359,13 @@ h1 {
             </div>
         </div>
         <div style=" align-items: center; justify-content: center; display: flex; margin-top: 5%;">
-            <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+            <div class="text-start">
+                <a href="./booknow.html">
+                    <button class="button mt-4" id="slide-to-form-btn">
+                        Buy Plan
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
     <div class="box2">
