--- a/pages/sart.html
+++ b/pages/sart.html
@@ -91,6 +91,24 @@
             text-align: center;
             align-items: center;
             justify-content: center;
+            padding: 2%;
+            font-family: 'Playfair Display', serif;
+        }
+        .button {
+            font-family: 'Noto Sans', sans-serif;
+            font-size: 1rem;
+            font-weight: bold;
+            color: #112F24;
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid #112F24;
+            padding: 1rem;
+            transition: all 0.3s;
+        }
+
+        .button:hover {
+            color: white;
+            background-color: #112F24;
         }
 
         h2 {
@@ -357,7 +375,13 @@ h1 {
         <div style="align-items: center; justify-content: center; display: flex; margin-top: 5%;">
             <br>
             <br>
-            <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn">Book Now</button></a>
+            <div class="text-start">
+                <a href="./cart_art_prefilled.html">
+                    <button class="button mt-4" id="slide-to-form-btn">
+                        Buy Plan
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
     <div class="box2">
